# CodeTide

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  MANIFIEST.in  README.md  output.json  pyproject.toml  pytest.ini  requirements-agents-ui.txt  requirements-agents.txt  requirements-visualization.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: hf_space_push.yml  python_package.yml
codetide/: __init__.py  autocomplete.py  cli.py  tf_idf_matcher.py  tide.py
codetide/agents/: __init__.py  data_layer.py
codetide/agents/tide/: __init__.py  agent.py  cli.py  cli_step.py  consts.py  defaults.py  models.py  prompts.py  ui.py  utils.py
codetide/core/: codegraph.py  common.py  defaults.py  graph.py  html.py  logs.py  mermaid.py  models.py  pydantic_graph.py  utils.py
codetide/mcp/: __init__.py  agent_tide_system.py  server.py  utils.py
codetide/mcp/tools/: __init__.py  apply_patch.py  check_code_identifiers.py  get_context.py  (+3 more)
codetide/parsers/: __init__.py  base_parser.py  generic_parser.py  python_parser.py  typescript_parser.py
codetide/search/: code_search.py  engine.py  preprocessor.py
examples/: agent_tide.py  aicore_dashboard.py  codetide_mcp_server.py  deserialize_codebase.py  parse_codetide.py  parse_project.py  python_project.py  smart_code_search.py
examples/agent/: __init__.py  utils.py
examples/hf_demo_space/: Dockerfile  README.md  api.py  app.py  docker-compose.yaml  git_utils.py  requirements.txt
public/: theme.json
tests/: test_autocomplete.py
tests/core/: test_common.py  test_models.py
tests/parsers/: test_generic_parser.py  test_python_parser.py  test_typescript_parser.py
(+33 files in other folders)
